laborations/lab2/testsuite/good/double--void--return.cc
void prant() {
  return printDouble(1.0);
  printDouble(0.0);
}

int main() {
  prant();
  return 0;
}
