laborations/lab2/testsuite/bad/bad/while_double.cc
int main() {
  while (1.0) {

  }
  return 0;
}
